# python-mcp-automated-qna-workflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  claude_desktop_config.example.json
business_scenarios/: sample-questions.csv  sample-workflow.md
google_sheets_mcp/: .env.example  COMPLETE_GOOGLE_SETUP.md  README.md  pyproject.toml
google_sheets_mcp/src/: server.py
knowledge_base_mcp/: README.md  pyproject.toml  test_server.py
knowledge_base_mcp/data/policies/: refund-policy.txt
knowledge_base_mcp/data/products/: pricing.txt
knowledge_base_mcp/data/support/: faq.txt
knowledge_base_mcp/src/: __init__.py  server.py
