[project]
name = "knowledge_base_mcp"
version = "0.1.0"
description = "MCP server for serving local documentation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"